# lorenz

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: lorenz.cpp  lorenz.h  lorenz_system.h  lorenzmodule.cpp  lorenzmodule.h  runge_kutta.h
